fix: img align

--- a/src/common/dialog/AchievementBottomSheet.scss
+++ b/src/common/dialog/AchievementBottomSheet.scss
@@ -31,6 +31,9 @@
 
     &-third-line {
         // margin-top: -30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-weight: 400;
         font-size: 11px;
         color: #3D3D3D;
